# vibe-house-shopping

./: .coverage  .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Home Purchase Calculations.xlsx  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run.py
app/: __init__.py  cost_analysis.py  dash_app.py  database.py  parser.py  watcher.py
data/: homes.db
tests/: conftest.py  test_cost_analysis.py  test_database.py  test_parser.py
tests/examples/: example_listing_1.html
