[project]
name = "vibe-house-shopping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "dash>=2.14.0",
    "dash-leaflet>=1.0.0",
    "geopy>=2.4.0",
    "lxml>=4.9.0",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
    "sqlalchemy>=2.0.0",
    "watchdog>=3.0.0",
]
